feat: add spoof operator

--- a/project_2/Makefile
+++ b/project_2/Makefile
@@ -1,10 +1,10 @@
 all: mitm_attack pharm_attack
 
-mitm_attack: mitm_attack.cpp scan.cpp arp.cpp
-	g++ -g mitm_attack.cpp scan.cpp arp.cpp -o mitm_attack
+mitm_attack: mitm_attack.cpp scan.cpp arp.cpp spoof.cpp
+	g++ -g mitm_attack.cpp scan.cpp arp.cpp spoof.cpp -o mitm_attack
 
-pharm_attack: pharm_attack.cpp scan.cpp arp.cpp
-	g++ -g pharm_attack.cpp scan.cpp arp.cpp -o pharm_attack
+pharm_attack: pharm_attack.cpp scan.cpp arp.cpp spoof.cpp
+	g++ -g pharm_attack.cpp scan.cpp arp.cpp spoof.cpp -o pharm_attack
 
 .PHONY:
 clean:
