feat: parse received packets

--- a/project_2/Makefile
+++ b/project_2/Makefile
@@ -1,10 +1,10 @@
 all: mitm_attack pharm_attack
 
-mitm_attack: mitm_attack.cpp scan.cpp arp.cpp spoof.cpp filter.cpp
+mitm_attack: mitm_attack.cpp scan.cpp arp.cpp spoof.cpp filter.cpp command.cpp
 	g++ -g mitm_attack.cpp scan.cpp arp.cpp spoof.cpp -o mitm_attack
 
-pharm_attack: pharm_attack.cpp scan.cpp arp.cpp spoof.cpp filter.cpp
-	g++ -g pharm_attack.cpp scan.cpp arp.cpp spoof.cpp filter.cpp -lnetfilter_queue -o pharm_attack 
+pharm_attack: pharm_attack.cpp scan.cpp arp.cpp spoof.cpp filter.cpp command.cpp
+	g++ -g pharm_attack.cpp scan.cpp arp.cpp spoof.cpp filter.cpp command.cpp -lnetfilter_queue -o pharm_attack 
 
 .PHONY:
 clean:
