feat: infect victim ls via crack_attack

--- a/project_3/Makefile
+++ b/project_3/Makefile
@@ -1,8 +1,13 @@
 setup:
 	chmod +x make_payload
 	chmod +x crack_attack
-	chmod +x attack_server
+	chmod +x attacker_server
 
 .PHONY:
 clean:
 	rm -f new_ls
+
+pack:
+	zip 109550014-109611087.zip Makefile attacker_server crack_attack \
+		make_payload set_IP_payload victim.dat virus
+	
